fix pink button to the bottom of the page with z-index 1 to hover

--- a/client/main.css
+++ b/client/main.css
@@ -82,6 +82,13 @@ h1, h2 {
     margin: 2px;
 }
 
+.select-button {
+    position: absolute;
+    bottom: 2%;
+    margin-left: 30px;
+    z-index: 1;
+}
+
 /* ---------------------------------------- */
 /* ------------     Form     -------------- */
 /* ---------------------------------------- */
